@@ -1,5 +1,5 @@
-po/qbzr.pot
-locale
+./po/qbzr.pot
+./locale
 # files from standalone QBzr installation
 ./_ext
 ./_lib
